slice user started